force-app/main/default/objects/AccountBudget__c/AccountBudget__c.object-meta.xml
<CustomObject>
    <description>AccountBudget</description>
    <label>Account Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>