force-app/main/default/objects/AccountBudget__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Budgets (Account)</relationshipLabel>
    <relationshipName>Account_Budgets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>