force-app/main/default/objects/AccountBudget__c/fields/AccountCategory__c.field-meta.xml
<CustomField>
    <fullName>AccountCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Category</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>AccountCategory__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>AccountCategory__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Retailer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountCategory__c</referenceTo>
    <relationshipLabel>Account Budgets</relationshipLabel>
    <relationshipName>AccountBudgets</relationshipName>
    <type>Lookup</type>
</CustomField>