force-app/main/default/objects/AccountBudget__c/fields/BudgetType__c.field-meta.xml
<CustomField>
    <fullName>BudgetType__c</fullName>
    <label>Budget Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi- Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>