force-app/main/default/objects/AccountBudget__c/fields/ExecutedAgainstBudget__c.field-meta.xml
<CustomField>
    <fullName>ExecutedAgainstBudget__c</fullName>
    <label>Executed Against Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>