force-app/main/default/objects/AccountBudget__c/fields/PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodEndDate__c</fullName>
    <label>Period End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>