force-app/main/default/objects/AccountBudget__c/fields/PlannedAgainstBudget__c.field-meta.xml
<CustomField>
    <fullName>PlannedAgainstBudget__c</fullName>
    <label>Planned Against Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>