force-app/main/default/objects/AccountBudget__c/fields/ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceCategory__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Merchandising</fullName>
            </value>
            <value>
                <fullName>Homestore ISE</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>