force-app/main/default/objects/AccountBudget__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>Sub Category</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>